--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,6 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Turret+Road:wght@200;300;400;500;700;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manrope:wght@200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
+     
+
 
 
     :root {
@@ -23,10 +28,49 @@
     text-align: center;
 }
 
+
 /* Body reset */
+
+body, input, footer{
+    font-family: "Manrope" !important;
+
+}
+
+ .heading, a, p, button, b, strong, div, .bottom-navbar, .accordion, footer, span, html{
+        font-family: "Poppins" !important;
+    }
+h1{
+    font-family: "Poppins" !important;
+    font-size: 32px  !important;
+    font-weight: bold !important;
+    line-height: 1.3 !important;
+}
+h2{
+    font-family: "Poppins" !important;
+    font-size: 24px  !important;
+    font-weight: 500 !important;
+    line-height: 1.3 !important;
+}
+h3{
+    font-family: "Poppins" !important;
+    font-size: 20px  !important;
+    line-height: 1.4 !important;
+}
+h4{
+    font-family: "Poppins" !important;
+    font-size: 16px  !important;
+    line-height: 1.4 !important;
+}
+button, .btn{
+     font-family: "Poppins" !important;
+    font-size: 16px  !important;
+     font-weight: 400 !important;
+    line-height: 1.5 !important;
+}
+
+
+        
 body {
-    /*font-family: sans-serif;*/
-    font-family: "Inter" !important;
     background-color: black;
     margin: 0;
     padding: 0;
@@ -941,7 +985,7 @@ img {
 .product-item-card-body {
     padding: 10px;
     text-align: center;
-    height: 75px;
+    height: 90px;
     color: black;
     /* Set fixed height for text body */
     overflow: hidden;
