--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4,9 +4,46 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manrope:wght@200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
-     
+/* Body reset */
 
+body, input, footer{
+    font-family: "Manrope" !important;
 
+}
+
+ .heading, a, p, button, b, strong, div, .bottom-navbar, .accordion, span, html, h5, h6, h7, h8{
+        font-family: "Poppins" !important;
+    }
+    
+        
+h1, .h1{
+    font-family: "Poppins" !important;
+    font-size: 32px  !important;
+    font-weight: bold !important;
+    line-height: 1.3 !important;
+}
+h2, .h2{
+    font-family: "Poppins" !important;
+    font-size: 24px  !important;
+    font-weight: 500 !important;
+    line-height: 1.3 !important;
+}
+h3, .h3{
+    font-family: "Poppins" !important;
+    font-size: 20px  !important;
+    line-height: 1.4 !important;
+}
+h4, .h4{
+    font-family: "Poppins" !important;
+    font-size: 16px  !important;
+    line-height: 1.4 !important;
+}
+button, .btn{
+     font-family: "Poppins" !important;
+    font-size: 16px  !important;
+     font-weight: 400 !important;
+    line-height: 1.5 !important;
+}
 
     :root {
         --primary-color: #efc475;
@@ -123,10 +160,9 @@ body {
          /*Equal spacing between items */
         align-items: center;
         margin: 0;
-        padding: 5px 0;
+        padding: 11px 13px;
         list-style: none;
-        left: 20 px;
-        right: 20 px;
+
     }
     
     .bottom-navbar ul li {
@@ -137,6 +173,9 @@ body {
         text-decoration: none;
         color: white;
         font-size: 14px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
     
     .bottom-navbar ul li a i {
